flicker fix

--- a/core/app/assets/stylesheets/glass/config/_base.scss
+++ b/core/app/assets/stylesheets/glass/config/_base.scss
@@ -59,6 +59,10 @@ a:active {
   transition: .2s ease-out;
 }
 
+.no-flicker{
+  -webkit-transform:translate3d(0,0,0);
+}
+
 .rotate-45 {
   transform: rotate(45deg);
 }
